--- a/cat bit.ipynb
+++ b/cat bit.ipynb
@@ -1255,6 +1255,25 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "c = pd.merge(a, b, on='Store', how='left')\n",
+    "c.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(a.shape(), b.shape(), c.shape())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
